--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "type": "module",
   "scripts": {
     "dev": "node scripts/dev_server.js",
-    "build": "node scripts/build.js && node scripts/generate-sitemap.js",
+    "build": "npm run icons:generate && node scripts/build.js && node scripts/generate-sitemap.js",
     "deploy": "npm run build && node scripts/package.js",
+    "icons:generate": "node scripts/generate-icons.js",
     "open": "bash -c \"xdg-open http://localhost:5173 || start http://localhost:5173 || open http://localhost:5173\"",
     "format": "prettier --write .",
     "format:check": "prettier --check .",
@@ -17,6 +18,7 @@
   },
   "devDependencies": {
     "cheerio": "^1.0.0",
+    "sharp": "^0.33.3",
     "prettier": "3.3.3"
   },
   "prettier": {
