--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "node scripts/dev_server.js",
-  "build": "npm run icons:generate && node scripts/generate-sitemap.js && node scripts/build.js",
+    "build": "npm run icons:generate && node scripts/generate-sitemap.js && node scripts/build.js",
     "deploy": "npm run build && node scripts/package.js",
     "icons:generate": "node scripts/generate-icons.js",
     "open": "bash -c \"xdg-open http://localhost:5173 || start http://localhost:5173 || open http://localhost:5173\"",
@@ -18,8 +18,8 @@
   },
   "devDependencies": {
     "cheerio": "^1.0.0",
-    "sharp": "^0.33.3",
-    "prettier": "3.3.3"
+    "prettier": "3.3.3",
+    "sharp": "^0.33.5"
   },
   "prettier": {
     "printWidth": 100,
