fix(ci): remove invalid secrets if expression in deploy workflow (handle in script)

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,10 +23,12 @@ jobs:
       - name: Setup Pages
         uses: actions/configure-pages@v5
       - name: Inject Discord webhook (feedback)
-        if: ${{ secrets.DISCORD_WEBHOOK != '' }}
         run: |
-          WEBHOOK="${{ secrets.DISCORD_WEBHOOK }}"
-          if [ -z "$WEBHOOK" ]; then echo "No webhook secret provided"; exit 0; fi
+          WEBHOOK='${{ secrets.DISCORD_WEBHOOK }}'
+          if [ -z "$WEBHOOK" ]; then
+            echo "No webhook secret provided (skipping injection)";
+            exit 0;
+          fi
           echo "Injecting feedback webhook into index.html"
           ESCAPED=$(printf '%s' "$WEBHOOK" | sed -e 's/[\/&]/\\&/g')
           sed -i "s|<meta name=\"feedback-webhook\" content=\"\" />|<meta name=\"feedback-webhook\" content=\"$ESCAPED\" />|" index.html || echo 'Meta tag not found'
