--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,19 +24,7 @@ jobs:
       - name: Setup Pages
         uses: actions/configure-pages@v5
 
-      - name: Generate cache-busting fingerprint
-        run: |
-          BUILD_ID="$(date -u +%Y%m%d_%H%M%S)-${GITHUB_SHA::8}"
-          echo "BUILD_ID=$BUILD_ID" >> $GITHUB_ENV
-          echo "Generated BUILD_ID: $BUILD_ID"
-          
-          # Reemplazar placeholder de timestamp para forzar invalidación
-          sed -i "s/<!-- BUILD_TIMESTAMP_CACHE_BUST -->/<!-- Build: $BUILD_ID -->/" index.html
-          sed -i "s/__BUILD_ID__/$BUILD_ID/" index.html
-          
-          echo "Cache-bust fingerprint applied"
-
-      - name: Inject Discord webhook (feedback)
+      - name: Inject Discord webhook (clean approach)
         run: |
           WEBHOOK='${{ secrets.DISCORD_WEBHOOK }}'
           if [ -z "$WEBHOOK" ]; then
@@ -44,11 +32,11 @@ jobs:
             exit 0
           fi
 
-          # Regenerar BUILD_ID para asegurar consistencia
-          BUILD_ID="$(date -u +%Y%m%d_%H%M%S)-${GITHUB_SHA::8}"
-          echo "Using BUILD_ID: $BUILD_ID"
+          # Generar timestamp único para invalidación de caché
+          BUILD_TS="$(date -u +%Y%m%d_%H%M%S)-${GITHUB_SHA::8}"
+          echo "Using BUILD_TS: $BUILD_TS"
 
-          echo "Injecting feedback webhook into index.html"
+          echo "Injecting feedback webhook into CLEAN index.html"
 
           # Escapar caracteres conflictivos en la URL
           ESCAPED=$(printf '%s' "$WEBHOOK" | sed -e 's/[\/&]/\\&/g')
@@ -58,16 +46,16 @@ jobs:
           echo 'SHA256 pre:'
           sha256sum index.html || shasum -a 256 index.html || true
 
-          # Reemplazar la meta, permitiendo cualquier atributo intermedio como data-build-id
-          sed -i -E "s|<meta name=\"feedback-webhook\"[^>]*content=\"[^\"]*\"[^>]*>|<meta name=\"feedback-webhook\" data-build-id=\"$BUILD_ID\" content=\"$ESCAPED\" />|" index.html || echo 'Meta tag not found'
+          # Reemplazar la meta limpia con timestamp y webhook
+          sed -i "s|<meta name=\"feedback-webhook\" content=\"\" />|<meta name=\"feedback-webhook\" data-build=\"$BUILD_TS\" content=\"$ESCAPED\" />|" index.html
 
           # Verificar que realmente se inyectó
           MATCH_LINE=$(grep -n "feedback-webhook" index.html || true)
-          echo "$MATCH_LINE"
+          echo "RESULT: $MATCH_LINE"
           if echo "$MATCH_LINE" | grep -q "content=\"$ESCAPED\""; then
-            echo "Webhook meta correctly injected (length ${#WEBHOOK})"
+            echo "✅ Webhook meta correctly injected (length ${#WEBHOOK})"
           else
-            echo "WARNING: Webhook meta NOT injected" >&2
+            echo "❌ WARNING: Webhook meta NOT injected" >&2
             exit 1
           fi
 
@@ -75,10 +63,6 @@ jobs:
           grep -n 'feedback-webhook' index.html || true
           echo 'SHA256 post:'
           sha256sum index.html || shasum -a 256 index.html || true
-          
-          echo '--- FINGERPRINT VERIFICATION ---'
-          grep -n 'data-build-id' index.html || echo 'NO BUILD ID FOUND'
-          grep -n 'Build:' index.html || echo 'NO BUILD COMMENT FOUND'
 
           # Guardar copia para análisis
           cp index.html index.after-injection.html
