--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -52,6 +52,13 @@ jobs:
           # Reemplazar la meta simple (sin atributos extra)
           sed -i "s|<meta name=\"feedback-webhook\" content=\"\" />|<meta name=\"feedback-webhook\" content=\"$ESCAPED\" />|" index.html || echo 'Meta tag not found'
 
+          echo "Writing fallback feedback-webhook.txt"
+          printf '%s\n' "$WEBHOOK" > feedback-webhook.txt
+          echo "Writing fallback config.json"
+          printf '{"feedbackWebhook":"%s"}\n' "$WEBHOOK" > config.json
+          echo 'Fallback files written:'
+          ls -l feedback-webhook.txt config.json || true
+
           # Verificar que realmente se inyectó
           MATCH_LINE=$(grep -n "feedback-webhook" index.html || true)
           echo "$MATCH_LINE"
@@ -66,6 +73,10 @@ jobs:
           grep -n 'feedback-webhook' index.html || true
           echo 'SHA256 post:'
           sha256sum index.html || shasum -a 256 index.html || true
+
+          echo 'Verifying fallback files contents (first 60 chars):'
+          head -c 60 feedback-webhook.txt || true; echo
+          head -c 80 config.json || true; echo
 
           # Guardar copia para análisis
           cp index.html index.after-injection.html
